2019-03-12  Albrecht Dreß  <albrecht.dress@arcor.de>

	Broken mailbox view after moving IMAP folder sideways

	I noticed a bug when a folder on a IMAP server is moved sideways,
	e.g. from “INBOX/Folder1/Test” to “INBOX/Folder2/Test”:
	after moving, a partial re-scan of the mailbox tree is performed,
	which makes all my local folders disappear.  The effect does
	not occur if the folder is moved up or down the tree.  I could
	track down the source of the issue to src/folder-conf.c, function
	subfolder_conf_clicked_ok().

	* src/folder-conf.c (subfolder_conf_clicked_ok): rescan the
	whole IMAP folder tree after a sideways move.

2019-03-05  Albrecht Dreß  <albrecht.dress@arcor.de>

	* libbalsa/send.c (libbalsa_create_rfc2440_buffer): fix confusing
	bcc: encryption warning in libbalsa_create_rfc2440_buffer()
	if no bcc: recipients are present;
	(do_multipart_crypto): use singular/plural form of this warning
	in do_multipart_crypto().

2019-03-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not attach files in response to clicking a "mailto:" URL

	Only if the URL is passed to Balsa on the command line by "-m"
	or "--compose".

	Also, accept either "attach=" or "attachment=" in a "mailto:"
	URL.

	* src/sendmsg-window.c (sendmsg_window_process_url),
	(sw_attach_file), (sendmsg_window_set_field),
	(set_list_post_rfc2369): attach a file only if the request comes
	from the command line;
	* src/balsa-mime-widget-text.c (url_send_cb), (handle_url): this
	request is not from the command line;
	* src/main.c (balsa_check_open_compose_window): this request is
	from the command line;
	* src/sendmsg-window.h: new argument "gboolean
	from_command_line" for sendmsg_window_process_url() and
	sendmsg_window_set_field().

2019-02-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify handling "mailto:" URLs

	* src/sendmsg-window.c (decode_and_strdup): simplify;
	(sendmsg_window_process_url): drop the "field_setter func"
	argument; it's always "sendmsg_window_set_field";